Replace symlink with actual wemob tmux cfg

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,1 +1,30 @@
-/home/santos/.config/tmux/tmux.conf
+# Bind prefix to Ctrl-a
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'dracula/tmux'
+
+# Open panes in current directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+set -g @dracula-plugins "time weather ram-usage"
+set -g @dracula-show-left-icon hostname
+set -g @dracula-show-timezone false
+set -g @dracula-time-format "%^A %d/%m/%y %H:%M"
+set -g @dracula-show-fahrenheit false
+set -g @dracula-fixed-location "JGS, SC"
+set -g @dracula-time-colors "pink dark_gray"
+set -g @dracula-weather-colors "pink dark_gray"
+set -g @dracula-ram-usage-colors "light_purple dark_gray"
+
+# Turn on mouse scrolling
+setw -g mouse on
+
+run '~/.tmux/plugins/tpm/tpm'
