--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,14 +14,12 @@ set -g @plugin 'dracula/tmux'
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-set -g @dracula-plugins "time weather ram-usage"
+set -g @dracula-plugins "time ram-usage"
 set -g @dracula-show-left-icon hostname
 set -g @dracula-show-timezone false
 set -g @dracula-time-format "%^A %d/%m/%y %H:%M"
 set -g @dracula-show-fahrenheit false
-set -g @dracula-fixed-location "JGS, SC"
-set -g @dracula-time-colors "pink dark_gray"
-set -g @dracula-weather-colors "pink dark_gray"
+set -g @dracula-time-colors "light_purple dark_gray"
 set -g @dracula-ram-usage-colors "light_purple dark_gray"
 
 # Turn on mouse scrolling
