Add open terminal tab special cmd, fix new-window bind

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,8 @@ set -g @plugin 'dracula/tmux'
 # Open panes in current directory
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+bind t split-window -c "#{pane_current_path}" \; resize-pane -D 15
 
 set -g @dracula-plugins "time ram-usage"
 set -g @dracula-show-left-icon hostname
