Add bind to move between panes using vim keys

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,7 +14,15 @@ set -g @plugin 'dracula/tmux'
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+# Open a small window for terminal cmds
 bind t split-window -c "#{pane_current_path}" \; resize-pane -D 15
+
+# Move between panes using vim cmds
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
 
 set -g @dracula-plugins "time ram-usage"
 set -g @dracula-show-left-icon hostname
