Update some vim opts

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,6 +3,10 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+# True color settings
+set -g default-terminal "$TERM"
+set -ag terminal-overrides ",$TERM:Tc"
+
 set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
 
 set -g @plugin 'tmux-plugins/tpm'
