--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -11,7 +11,7 @@ title = "noo god please no!"
 TERM = "xterm-256color"
 
 [font]
-normal = { family = "Fira Code", style = "Regular" }
+normal = { family = "Fira Code Nerd Font", style = "Regular" }
 size = 12
 
 [terminal]
