Create tmux binding to rename window

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -18,6 +18,7 @@ set -g @plugin 'dracula/tmux'
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+bind r command-prompt -p "New pane name:" "rename-window %1"
 
 # Open a small window for terminal cmds
 bind t split-window -c "#{pane_current_path}" \; resize-pane -D 15
