--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -36,6 +36,7 @@ set -g @dracula-time-format "%^A %d/%m/%y %H:%M"
 set -g @dracula-show-fahrenheit false
 set -g @dracula-time-colors "light_purple dark_gray"
 set -g @dracula-ram-usage-colors "light_purple dark_gray"
+set -as terminal-features ",*:RGB"
 
 # Turn on mouse scrolling
 setw -g mouse on
