--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -29,13 +29,21 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
-set -g @dracula-plugins "time ram-usage"
+set -g @dracula-plugins "time ram-usage uptime battery"
 set -g @dracula-show-left-icon hostname
 set -g @dracula-show-timezone false
 set -g @dracula-time-format "%^A %d/%m/%y %H:%M"
-set -g @dracula-show-fahrenheit false
+set -g @dracula-uptime-label "󱎫"
+set -g @dracula-no-battery-label ""
+set -g @dracula-battery-label false
+set -g @dracula-show-battery-status true
+
 set -g @dracula-time-colors "light_purple dark_gray"
 set -g @dracula-ram-usage-colors "light_purple dark_gray"
+set -g @dracula-uptime-colors "orange dark_gray"
+set -g @dracula-battery-colors "red white"
+
+# important for nvim themes work correctly
 set -as terminal-features ",*:RGB"
 
 # Turn on mouse scrolling
