--- a/.gitconfig
+++ b/.gitconfig
@@ -12,3 +12,9 @@
     br = branch
     ci = commit
     rup = remote update --prune
+[push]
+    default = simple
+[pull]
+    rebase = true
+[rebase]
+    autoStash = true
